# provider-variant-xpu

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
intel_variant_provider/: __init__.py  devices.py  plugin.py  ze.py
provider_variant_xpu/: devices.py  plugin.py  ze.py
tests/: test_devices.py  test_plugin.py
