[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "provider-variant-xpu"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Chuanqi Wang", email = "chuanqi.wang@intel.com"},
    {name = "Dmitry Rogozhkin", email = "dmitry.v.rogozhkin@intel.com"},
]
dynamic = ["version", "description"]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "ruff",
    "variantlib",
]

[project.urls]
Home = "https://github.com/wheelnext/provider-variant-xpu/"

[project.entry-points.variant_plugins]
provider_variant_xpu = "provider_variant_xpu.plugin:XpuVariantPlugin"

[tool.ruff.lint]
    select = ["E"]
    ignore = ["E501"]
