[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "intel-variant-provider"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Chuanqi Wang", email = "chuanqi.wang@intel.com"},
    {name = "Dmitry Rogozhkin", email = "dmitry.v.rogozhkin@intel.com"},
]
dynamic = ["version", "description"]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "ruff",
    "variantlib",
]

[project.urls]
Home = "https://github.com/wheelnext/intel-variant-provider/"

[project.entry-points.variant_plugins]
intel_variant_provider = "intel_variant_provider.plugin:IntelVariantPlugin"

[tool.ruff.lint]
    select = ["E", "F", "I"]
    ignore = ["E501", "F403", "F405"]
